project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dowkproj-svc
spec:
  type: NodePort
  selector:
    app: dowkproj # App name declared in deployment.yaml
  ports:
  - name: http
    nodePort: 30085
    protocol: TCP
    port: 9999
    targetPort: 3001 # Default port, must be changed if app is started with a different port
